USE1401.H

typedef  void FAR *        U14PARAM;
#define  GET_TX_MAXENTRIES    65       /* Array size for GetTransfer struct */
typedef TGET_TX_BLOCK FAR *    LPGET_TX_BLOCK;
typedef union     /* to communicate with 1401 driver status & control funcs */
{
   char           chrs[22];
   short          ints[11];
   long           longs[5];
   T1401REGISTERS registers;
} TCSBLOCK;
typedef TCSBLOCK*  LPTCSBLOCK;
typedef TCSBLOCK FAR *  LPTCSBLOCK;
        /* Returns non zero if the timed passed in has been passed 0 if not */

U14API(short) U14LastErrCode(short hand);
U14API(short) U14Open1401(short n1401);
U14API(short) U14Close1401(short hand);
U14API(short) U14Reset1401(short hand);
U14API(short) U14TypeOf1401(short hand);
U14API(short) U14Stat1401(short hand);
U14API(short) U14CharCount(short hand);
U14API(short) U14LineCount(short hand);
U14API(short) U14SendString(short hand, LPCSTR lpString);
U14API(short) U14GetString(short hand, LPSTR lpBuffer, WORD wMaxLen);
U14API(short) U14SendChar(short hand, char cChar);
U14API(short) U14GetChar(short hand, LPSTR lpcChar);
U14API(short) U14LdCmd(short hand, LPCSTR command);
U14API(DWORD) U14Ld(short hand, LPCSTR vl, LPCSTR str);
U14API(short) U14SetTransArea(short hand, WORD wArea, void FAR * lpvBuff,
                                            DWORD dwLength, short eSz);
U14API(short) U14UnSetTransfer(short hand, WORD wArea);
U14API(short) U14ToHost(short hand, LPSTR lpAddrHost,DWORD dwSize,DWORD dw1401,
                                                            short eSz);
U14API(short) U14To1401(short hand, LPCSTR lpAddrHost,DWORD dwSize,DWORD dw1401,
                                                            short eSz);
U14API(short) U14StrToLongs(LPCSTR lpszBuff,long FAR *lpalNums,short sMaxLongs);
U14API(short) U14LongsFrom1401(short hand, long FAR * lpalBuff,short sMaxLongs);
U14API(void)  U14SetTimeout(short hand, long lTimeout);
U14API(long)  U14GetTimeout(short hand);
U14API(short) U14OutBufSpace(short hand);
U14API(long)  U14BaseAddr1401(short hand);
U14API(long)  U14DriverVersion(void);
U14API(short) U14GetUserMemorySize (short hand, long FAR * lpMemorySize);
U14API(short) U14KillIO1401(short hand);
U14API(short) U14ZeroBlockCount(short hand);
U14API(short) U14ByteCount(short hand, long FAR * lpHowMany);
U14API(short) U14BlkTransState(short hand);
U14API(short) U14StopCircular(short hand);
U14API(short) U14StateOf1401(short hand);
U14API(short) U14Grab1401(short hand);
U14API(short) U14Free1401(short hand);
U14API(short) U14Step1401(short hand);
U14API(short) U14StepTill1401(short hand, long steps, long targetAddress);
U14API(short) U14Registers1401(short hand, LPTCSBLOCK lpBlock);
U14API(short) U14Set1401Registers(short hand, LPTCSBLOCK lpBlock);
U14API(short) U14SetOrin(short hand, short sOrIn);
/* defines for type of function to ask driver to perform                    */
/* NOTE: any changes here must be reflected in WIN16 constants in NT section*/

#define  U14_OPEN1401         0
#define  U14_CLOSE1401        1
#define  U14_SENDSTRING       2
#define  U14_RESET1401        3
#define  U14_GETCHAR          4
#define  U14_SENDCHAR         5
#define  U14_STAT1401         6
#define  U14_LINECOUNT        7
#define  U14_GETSTRING        8
#define  U14_REGCALLBACK      9
#define  U14_GETMONITORBUF    10
#define  U14_SETTRANSFER      11
#define  U14_UNSETTRANSFER    12
#define  U14_GETCIRCSELECTOR  13
#define  U14_GETOUTBUFSPACE   14
#define  U14_GETBASEADDRESS   15
#define  U14_GETDRIVERREVISION   16
#define  U14_GETTRANSFER      17
#define  U14_KILLIO1401       18
#define  U14_BLKTRANSSTATE    19
#define  U14_BYTECOUNT        20
#define  U14_ZEROBLOCKCOUNT   21
#define  U14_STOPCIRCULAR     22
#define  U14_STATEOF1401      23
#define  U14_REGISTERS1401    24
#define  U14_GRAB1401         25
#define  U14_FREE1401         26
#define  U14_STEP1401         27
#define  U14_SET1401REGISTERS 28
#define  U14_STEPTILL1401     29
#define  U14_SETORIN          30
#define  U14_TYPEOF1401       33
#define  U14_NOSUBFN       0
#define  WM_CEDCALLBACK_STR   "CEDCALLBACK"
U14API(short) U14CallDriver(short hand, BYTE bMainFn, BYTE bSubFn, U14PARAM lpParams);
U14API(short) U14RegCallBackWnd(short n1401, HWND hWnd, LPWORD lpwMessCode);
U14API(short) U14DeRegCallBackWnd(HWND hWnd);
U14API(short) U14GetMonBuff(LPSTR lpBuffer, WORD wMaxLen);
U14API(short) U14GetCircSelector(void);
U14API(short) U14GetTransfer(short hand, LPGET_TX_BLOCK lpTransBlock);
#define  U14Status1401(H,X,Y)   U14CallDriver(H,X,U14_NOSUBFN,(U14PARAM)Y)
#define  U14Control1401(H,X,Y)  U14CallDriver(H,X,U14_NOSUBFN,(U14PARAM)Y)
/* defines for type of function to ask driver to perform                    */
/* these must be matched in the Use1401 DLL which will call us              */
/* Define the IOCTL codes we will use.  The IOCTL code contains a command   */
/* identifier, plus other information about the device, the type of access  */
/* with which the file must have been opened, and the type of buffering.    */
/*
/* The IOCTL function codes from 0x80 to 0xFF are for developer use.        */

#define  U14_OPEN1401            CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE,               \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_CLOSE1401           CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+1,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_SENDSTRING          CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+2,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_RESET1401           CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+3,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GETCHAR             CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+4,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_SENDCHAR            CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+5,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_STAT1401            CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+6,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_LINECOUNT           CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+7,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GETSTRING           CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+8,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_REGCALLBACK         CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+9,             \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GETMONITORBUF       CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+10,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_SETTRANSFER         CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+11,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_UNSETTRANSFER       CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+12,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GETCIRCSELECTOR     CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+13,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GETOUTBUFSPACE      CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+14,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GETBASEADDRESS      CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+15,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GETDRIVERREVISION   CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+16,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GETTRANSFER         CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+17,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_KILLIO1401          CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+18,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_BLKTRANSSTATE       CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+19,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_BYTECOUNT           CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+20,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_ZEROBLOCKCOUNT      CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+21,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_STOPCIRCULAR        CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+22,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_STATEOF1401         CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+23,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_REGISTERS1401       CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+24,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_GRAB1401            CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+25,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_FREE1401            CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+26,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_STEP1401            CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+27,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_SET1401REGISTERS    CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+28,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_STEPTILL1401        CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+29,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_SETORIN             CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+30,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
#define  U14_TYPEOF1401          CTL_CODE( FILE_DEVICE_CED1401,     \
                                           FNNUMBASE+33,            \
                                           METHOD_BUFFERED,         \
                                           FILE_ANY_ACCESS)
U14API(short) U14GetTransfer(short hand, LPGET_TX_BLOCK lpTransBlock);
U14API(short) U14Status1401(short sHand, LONG lCode, TCSBLOCK* pBlk);
U14API(short) U14Control1401(short sHand, LONG lCode, TCSBLOCK* pBlk);
typedef TRANSFERDESC FAR *    LPTRANSFERDESC;
/* Status codes */

#define  U14_STAT1401            0
#define  U14_GETOUTBUFSPACE      2
#define  U14_GETBASEADDRESS      3
#define  U14_STATEOF1401         4     /* These use different elements of   */
#define  U14_TYPEOF1401          4     /* the param block to return info    */
#define  U14_GETDRIVERREVISION   5
#define  U14_REGISTERS1401       6
#define  U14_BYTECOUNT           7
#define  U14_LINECOUNT           8
#define  U14_GETTRANSFER         10
#define  U14_BLKTRANSSTATE       13
/* Control codes */

#define  U14_STOPCIRCULAR        0
#define  U14_SETTRANSFER         2
#define  U14_UNSETTRANSFER       3
#define  U14_KILLIO1401          6
#define  U14_GRAB1401            7
#define  U14_FREE1401            8
#define  U14_STEP1401            9
#define  U14_SET1401REGISTERS    10
#define  U14_STEPTILL1401        11
#define  U14_SETORIN             12
#define  U14_RESET1401           16
#define  U14_ZEROBLOCKCOUNT      17
U14API(short) U14GetTransfer(short hand, LPTRANSFERDESC lpTransDesc);
U14API(short) U14Status1401(short hand, short csCode, LPTCSBLOCK pBlock);
U14API(short) U14Control1401(short hand, short csCode, LPTCSBLOCK pBlock);