USE1432.PAS


CONST  U14_OPEN1401        =0;
CONST  U14_CLOSE1401       =1;
CONST  U14_SENDSTRING      =2;
CONST  U14_RESET1401       =3;
CONST  U14_GETCHAR         =4;
CONST  U14_SENDCHAR        =5;
CONST  U14_STAT1401        =6;
CONST  U14_LINECOUNT       =7;
CONST  U14_GETSTRING       =8;
CONST  U14_REGCALLBACK     =9;
CONST  U14_GETMONITORBUF   =10;
CONST  U14_SETTRANSFER     =11;
CONST  U14_UNSETTRANSFER   =12;
CONST  U14_GETCIRCSELECTOR =13;
CONST  U14_GETOUTBUFSPACE  =14;
CONST  U14_GETBASEADDRESS  =15;
CONST  U14_GETDRIVERREVISION=16;
CONST  U14_GETTRANSFER      =17;
CONST  U14_KILLIO1401       =18;
CONST  U14_BLKTRANSSTATE    =19;
CONST  U14_BYTECOUNT        =20;
CONST  U14_ZEROBLOCKCOUNT   =21;
CONST  U14_STOPCIRCULAR     =22;
CONST  U14_STATEOF1401      =23;

(* not yet implemented from here *)

CONST  U14_TYPEOF1401       =24;
CONST  U14_REGISTERS1401    =25;
CONST  U14_GRAB1401         =26;
CONST  U14_FREE1401         =27;
CONST  U14_STEP1401         =28;
CONST  U14_SET1401REGISTERS =29;
CONST  U14_STEPTILL1401     =30;
CONST  U14_SETORIN          =31;

(* end of unimplemented *)

CONST  U14_NOSUBFN       =0;

CONST  WM_CEDCALLBACK_STR='CEDCALLBACK';

CONST  GET_TX_MAXENTRIES =65;          (* Array size for GetTransfer struct *)

TYPE TXEntry=RECORD                     (* used for U14_GetTransfer results *)
                                          (* Info on a single mapped block *)
             physical:LONGINT;
             size:LONGINT;
             END;

TYPE TGet_TX_Block=RECORD               (* used for U14_GetTransfer results *)
                                                (* matches structure in VXD *)
                   size:LONGINT;
                   linear:LONGINT;
                   seg:INTEGER;
                   reserved:INTEGER;
                   avail:INTEGER;
                   used:INTEGER;
                   entries:ARRAY [0..GET_TX_MAXENTRIES-1] OF TXEntry;
                                               (*Array of mapped block info *)
                   END;

TYPE TGet_TX_BlockPnt=^TGet_TX_Block;
TYPE TU14Param=POINTER;
     TPWORD=^WORD;
     HWND=WORD;          {redefine the type for a window handle}
FUNCTION U14CallDriver(hand:INTEGER;bMainFn:BYTE;bSubFn:BYTE;
                                                  lpParams:TU14Param):INTEGER; stdcall;
FUNCTION U14Status1401(hand:INTEGER;bMainFn:BYTE;lpParams:TU14Param):INTEGER; stdcall;
FUNCTION U14Control1401(hand:INTEGER;bMainFn:BYTE;lpParams:TU14Param):INTEGER; stdcall;

FUNCTION U14RegCallBackWnd(n1401:INTEGER;hWnd:HWND;lpwMessCode:TPWORD):INTEGER; stdcall;
FUNCTION U14DeRegCallBackWnd(hWnd:HWND):INTEGER; stdcall;
FUNCTION U14GetMonBuff(lpBuffer:PChar;wMaxLen:WORD):INTEGER; stdcall;
FUNCTION U14GetCircSelector:INTEGER; stdcall;

FUNCTION U14GetTransfer(hand:INTEGER;VAR transBlock:TGet_TX_Block):INTEGER; stdcall;

Implementation
(* Almost all defined as external, as they are in USE1432.DLL*)
FUNCTION U14LastErrCode(hand:INTEGER):INTEGER;             stdcall; EXTERNAL  'USE1432';

FUNCTION U14Open1401(n1401:integer):integer;               stdcall; EXTERNAL  'USE1432';
FUNCTION U14Close1401(hand:INTEGER):INTEGER;               stdcall; EXTERNAL  'USE1432';
FUNCTION U14Reset1401(hand:INTEGER):INTEGER;               stdcall; EXTERNAL  'USE1432';
FUNCTION U14TypeOf1401(hand:INTEGER):INTEGER;              stdcall; EXTERNAL  'USE1432';

FUNCTION U14Stat1401(hand:INTEGER):INTEGER;                stdcall; EXTERNAL  'USE1432';
FUNCTION U14CharCount(hand:INTEGER):INTEGER;               stdcall; EXTERNAL  'USE1432';
FUNCTION U14LineCount(hand:INTEGER):INTEGER;               stdcall; EXTERNAL  'USE1432';
FUNCTION U14SendString(hand:INTEGER;PCharing:PChar):INTEGER;
                                                           stdcall; EXTERNAL  'USE1432';
FUNCTION U14GetString(hand:INTEGER;lpBuffer:PChar;wMaxLen:WORD):INTEGER;
                                                           stdcall; EXTERNAL  'USE1432';
FUNCTION U14SendChar(hand:INTEGER;cChar:CHAR):INTEGER;     stdcall; EXTERNAL  'USE1432';
FUNCTION U14GetChar(hand:INTEGER;VAR cChar:CHAR):INTEGER;
                                                           stdcall; EXTERNAL  'USE1432';

FUNCTION U14LdCmd(hand:INTEGER;command:PChar):INTEGER;     stdcall; EXTERNAL  'USE1432';
FUNCTION U14Ld(hand:INTEGER;vl:PChar;str:PChar):DWORD;     stdcall; EXTERNAL  'USE1432';

FUNCTION U14SetTransArea(hand:INTEGER; wArea:WORD; lpvBuff:POINTER;
                  dwLength:DWORD; eSize:INTEGER):INTEGER;  stdcall; EXTERNAL  'USE1432';
FUNCTION U14UnSetTransfer(hand:INTEGER;wAreaNum:WORD):INTEGER;
                                                           stdcall; EXTERNAL  'USE1432';

FUNCTION U14ToHost(hand:INTEGER;lpAddrHost:PChar;dwSize:DWORD;
                    lAddr1401:LONGINT;eSz:INTEGER):INTEGER;stdcall; EXTERNAL  'USE1432';
FUNCTION U14To1401(hand:INTEGER;lpAddrHost:PChar;dwSize:DWORD;
                    lAddr1401:LONGINT;eSz:INTEGER):INTEGER;stdcall; EXTERNAL  'USE1432';
FUNCTION U14StrToLongs(lpszBuff:PChar;palNums:TpNums;
                                sMaxLongs:INTEGER):INTEGER;stdcall; EXTERNAL  'USE1432';
FUNCTION U14LongsFrom1401(hand:INTEGER;palBuff:TpNums;
                                sMaxLongs:INTEGER):INTEGER;stdcall; EXTERNAL  'USE1432';

PROCEDURE U14SetTimeout(hand:INTEGER;lTimeout:LONGINT);    stdcall; EXTERNAL  'USE1432';
FUNCTION  U14GetTimeout(hand:INTEGER):LONGINT;             stdcall; EXTERNAL  'USE1432';
FUNCTION  U14OutBufSpace(hand:INTEGER):INTEGER;            stdcall; EXTERNAL  'USE1432';
FUNCTION  U14BaseAddr1401(hand:INTEGER):LONGINT;           stdcall; EXTERNAL  'USE1432';
FUNCTION  U14DriverVersion:LONGINT;                        stdcall; EXTERNAL  'USE1432';
FUNCTION  U14GetUserMemorySize(hand:INTEGER;VAR memorySize:LONGINT)
                                                  :INTEGER;stdcall; EXTERNAL  'USE1432';
FUNCTION  U14KillIO1401(hand:INTEGER):INTEGER;             stdcall; EXTERNAL  'USE1432';
FUNCTION U14ZeroBlockCount(hand:INTEGER):INTEGER;          stdcall; EXTERNAL  'USE1432';
FUNCTION U14ByteCount(hand:INTEGER;VAR howMany:LONGINT):INTEGER;
                                                           stdcall; EXTERNAL  'USE1432';
FUNCTION U14BlkTransState(hand:INTEGER):INTEGER;           stdcall; EXTERNAL  'USE1432';
FUNCTION U14StopCircular(hand:INTEGER):INTEGER;            stdcall; EXTERNAL  'USE1432';
FUNCTION U14StateOf1401(hand:INTEGER):INTEGER;             stdcall; EXTERNAL  'USE1432';

FUNCTION U14Grab1401(hand:INTEGER):INTEGER;                stdcall; EXTERNAL  'USE1432';
FUNCTION U14Free1401(hand:INTEGER):INTEGER;                stdcall; EXTERNAL  'USE1432';
FUNCTION U14Step1401(hand:INTEGER):INTEGER;                stdcall; EXTERNAL  'USE1432';
FUNCTION U14StepTill1401(hand:INTEGER;steps:LONGINT;
                            targetAddress:LONGINT):INTEGER;stdcall; EXTERNAL  'USE1432';
FUNCTION U14Registers1401(hand:INTEGER;
                             VAR csBlock:TCSBlock):INTEGER;stdcall; EXTERNAL  'USE1432';
FUNCTION U14Set1401Registers(hand:INTEGER;
                           CONST csBlock:TCSBlock):INTEGER;stdcall; EXTERNAL  'USE1432';
FUNCTION U14SetOrin(hand:INTEGER;sOrIn:INTEGER):INTEGER;   stdcall; EXTERNAL  'USE1432';

(*Windows specific*)
FUNCTION U14CallDriver(hand:INTEGER;bMainFn:BYTE;bSubFn:BYTE;
                               lpParams:TU14Param):INTEGER;stdcall; EXTERNAL  'USE1432';

FUNCTION U14RegCallBackWnd(n1401:INTEGER;hWnd:HWND;
                               lpwMessCode:TPWORD):INTEGER;stdcall; EXTERNAL  'USE1432';
FUNCTION U14DeRegCallBackWnd(hWnd:HWND):INTEGER;           stdcall; EXTERNAL  'USE1432';
FUNCTION U14GetMonBuff(lpBuffer:PChar;
                               wMaxLen:WORD):INTEGER;      stdcall; EXTERNAL  'USE1432';
FUNCTION U14GetCircSelector:INTEGER;                       stdcall; EXTERNAL  'USE1432';

FUNCTION U14GetTransfer(hand:INTEGER;VAR transBlock:TGet_TX_Block)
                                                  :INTEGER;stdcall; EXTERNAL  'USE1432';

FUNCTION U14Status1401(hand:INTEGER;bMainFn:BYTE;lpParams:TU14Param):INTEGER;
{optional way of calling driver routine when using "Control" main functions,
 in order to create clearer code}
BEGIN
U14CallDriver(hand,bMainFn,U14_NOSUBFN,lpParams);
END;

FUNCTION U14Control1401(hand:INTEGER;bMainFn:BYTE;lpParams:TU14Param):INTEGER;
{Optional way of calling driver routine when using "Control" main functions,
 in order to create clearer code}
BEGIN
U14CallDriver(hand,bMainFn,U14_NOSUBFN,lpParams);
END;

END.


